added carousel, contact, js buttons

--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,66 @@ body{
     min-height: 200vh;
 }
 
+section{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 80px 100px;
+    color: #fff;
+}
+
+.send-btn{
+    font-size: 20px;
+    color: #fff;
+    background-color: #8a6247;
+    width: 200px;
+    height: 60px;
+    cursor: pointer;
+    border-radius: 50px;
+    border: none;
+    box-shadow: 0 8px 5px -5px rgba(0,0,0,0.2);
+    display: grid;
+    place-content: center;
+}
+
+.loader{
+    pointer-events: none;
+    width:30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: #fff;
+    animation: an1 1s ease infinite;
+}
+
+@keyframes an1{
+    0%{
+        transform: rotate(0turn);
+    }
+    100%{
+        transform: rotate(1turn);
+    }
+}
+
+.dnl-btn{
+    font-size: 20px;
+    color: #fff;
+    background-color: #8a6247;
+    width: 200px;
+    height: 60px;
+    cursor: pointer;
+    border-radius: 50px;
+    border: none;
+    box-shadow: 0 8px 5px -5px rgba(0,0,0,0.2);
+    display: grid;
+    place-content: center;
+}
+
+/* =================================================== 
+                    H E A D E R
+===================================================== */
+
 header{
     position: fixed;
     top: 0;
@@ -46,8 +106,6 @@ header .logo{
     transition: 0.6s;
 }
 
-
-
 header ul{
     position: relative;
     display: flex;
@@ -70,15 +128,11 @@ header ul li a{
     transition: 0.6s;
 }
 
-section{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 80px 100px;
-    color: #fff;
-}
 
+header ul li a:hover{ 
+    color: rgb(206, 173, 152);
+    font-size: 1.2em;
+}
 
 
 /* =================================================== 
@@ -90,7 +144,7 @@ section{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .main-title{
@@ -125,14 +179,13 @@ section{
 }
 
 .content .text-box{
-    z-index: 222;
     background: rgba(36, 36, 36, 0.3);
     backdrop-filter: blur(20px);
     padding: 40px;
     max-width: 500px;
     border: 1px solid rgba(255,255,255,0.3);
     border-radius: 10px;
-    transform: translate(-80px,50px);
+    transform: translate(-100px,3px);
 }
 
 .content .text-box h1{
@@ -141,7 +194,7 @@ section{
 }
 
 .media-icons{
-    margin-top: 100px;
+    margin-top: 20px;
 }
 
 .media-icons a{
@@ -155,7 +208,7 @@ section{
 ===================================================== */
 .section-title{
     font-size: 3em;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 .info-title{
     font-size: 1.8em;
@@ -235,3 +288,356 @@ section{
     opacity: .9;
     top: 0;
 }
+
+/* =================================================== 
+                    OUR CUSTOMERS
+===================================================== */
+
+/*---------------CUSTOMERS ANIMATION------------- */
+#Feedback .section-title::before{
+    background-color: #ffffff;
+    animation:
+        typewriter 8s steps(13) 2s forwards;
+        animation-iteration-count: infinite;
+        
+}
+
+#Feedback .section-title::after{
+    width: 0.125em;
+    background: #000000;
+    animation:
+        typewriter 8s steps(13) 2s forwards,
+        blink 750ms steps(13) infinite;
+        animation-iteration-count: infinite;
+}
+
+/* ---------------CUSTOMERS COMPONENTS------------------- */   
+.feedback-container{
+    padding-bottom: 5rem; 
+}
+.feedback-container .description{
+    width: 100%;
+    margin: 30px 0;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    font-size: 1.40rem;
+    color:#000000;
+}
+
+#Feedback{
+    margin:0;
+    padding:0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+/* ----------IMAGE CAROUSEL--------- */
+.slider{
+    width: 1000px;
+    height:600px;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+}
+
+.slides{
+    width: 500%;
+    height: 500px;
+    display:flex;
+}
+
+.slides input{
+    display:none;
+}
+
+.img{
+    width: 20%;
+    transition: 2s;
+}
+
+.img img {
+    width: 1000px;
+    height:800px;
+    
+}
+
+/* -------FOR MANUAL NAVIGATION------ */
+
+.navigation-manual{
+    position: absolute;
+    width: 1000px;
+    margin-top: 35rem;
+    display: flex;
+    justify-content:center;
+
+}
+.manual-btn{
+    border: 2px solid #000000;
+    border-radius: 30px;
+    cursor: pointer;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    opacity: 0.8;
+    transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+    margin-right: 40px;
+
+}
+.manual-btn:hover{
+    background-color: #000000;
+    opacity: 1;
+}
+
+#radio1:checked ~ .first{
+    margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+    margin-left: -20%;
+}
+
+#radio3:checked ~ .first{
+    margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+    margin-left: -60%;
+}
+
+#radio5:checked ~ .first{
+    margin-left: -80%;
+}
+
+/* -------FOR AUTOMATIC NAVIGATION------ */
+
+.navigation-auto{
+    position: absolute;
+    width: 1000px;
+    margin-top: 35rem;
+    display: flex;
+    justify-content:center;
+}
+
+.navigation-auto div{
+    border: 2px solid #000000;
+    border-radius: 30px;
+    cursor: pointer;
+    display: inline-block;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    opacity: 0.8;
+    transition: 1s;
+}
+
+.navigation-auto div:not(:last-child){
+    margin-right: 40px;
+}
+
+#radio1:checked ~ .navigation-auto .auto-btn1{
+    background-color: #000000;
+    opacity: 1;
+}
+
+#radio2:checked ~ .navigation-auto .auto-btn2{
+    background-color: #000000;
+    opacity: 1;
+}
+
+#radio3:checked ~ .navigation-auto .auto-btn3{
+    background-color: #000000;
+    opacity: 1;
+}
+
+#radio4:checked ~ .navigation-auto .auto-btn4{
+    background-color: #000000;
+    opacity: 1;
+}
+
+#radio5:checked ~ .navigation-auto .auto-btn5{
+    background-color: #000000;
+    opacity: 1;
+}
+
+/* =================================================== 
+                    CONTACT US
+===================================================== */
+
+/*---------------CONTACT TITLE ANIMATION------------- */
+#contact-section .section-title::before{
+    background-color: #000000;
+    animation:
+        typewriter 8s steps(19) 2s forwards;
+        animation-iteration-count: infinite;
+        
+}
+
+#contact-section .section-title::after{
+    width: 0.125em;
+    background: #ffffff;
+    animation:
+        typewriter 8s steps(19) 2s forwards,
+        blink 750ms steps(19) infinite;
+        animation-iteration-count: infinite;
+}
+
+/* ---------------CONTACT COMPONENTS------------------- */   
+
+#contact-section{
+    padding-bottom: 20rem;
+}
+
+.contact-container .description{
+    width: 100%;
+    margin: 30px 0;
+    margin-top: 0;
+    display: flex;
+    justify-content: center;
+    font-size: 1.40rem;
+    color: #000000;
+}
+
+/* ----------INPUT STYLING---------- */
+input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid ~ label {
+    font-size: 0.75em;
+    color: #000000;
+    top: -5px;
+    -webkit-transition: all 0.225s ease;
+    transition: all 0.225s ease;
+}
+
+.styled-input {
+    float: left;
+    width: 293px;
+    margin: 1rem 0;
+    position: relative;
+    border-radius: 4px;
+}
+
+.styled-input label {
+    color: #ffffff;
+    padding: 1.3rem 30px 1rem 30px;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    -webkit-transition: all 0.25s ease;
+    transition: all 0.25s ease;
+    pointer-events: none;
+}
+
+.styled-input.wide { 
+    width: 650px;
+    max-width: 100%;
+}
+
+input,
+textarea {
+    padding: 30px;
+    border: 0;
+    width: 100%;
+    font-size: 1rem;
+    background-color: #000000;
+    color: #ffffff;
+    border-radius: 4px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+input:focus,
+textarea:focus { outline: 0; }
+
+input:focus ~ span,
+textarea:focus ~ span {
+    width: 100%;
+    -webkit-transition: all 0.075s ease;
+    transition: all 0.075s ease;
+}
+
+textarea {
+    width: 100%;
+    min-height: 15em;
+}
+
+.input-container {
+    width: 650px;
+    max-width: 100%;
+    margin: 20px auto 25px auto;
+
+}
+
+input[type=checkbox] + label {
+    color: #ffffff;
+    font-style: italic;
+} 
+
+input[type=checkbox]:checked + label {
+    color: rgb(255, 255, 255);
+    font-style: normal;
+}
+
+
+/* =================================================== 
+                    FOOTER
+===================================================== */
+.footer {
+    clear: both;
+    position: relative;
+    height: 250px;
+    margin-top: -200px;
+    background: #000000;
+    bottom: 0;
+}
+
+.footer-content{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+.footer-content p{
+    max-width: 500px;
+    line-height: 28px;
+    font-size: 15px;
+    color: #ffffff;
+}
+
+/* ----SOC MED ICONS STYLING------ */
+.socials{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
+}
+.socials li{
+    margin: 0 10px;
+}
+.socials a{
+    text-decoration: none;
+    color: #ffffff;
+    border: 1.1px solid rgb(255, 255, 255);
+    padding: 5px;
+    border-radius: 50%;
+}
+
+.socials a i{
+    font-size: 1.1rem;
+    width: 20px;
+    transition: color .4s ease;
+}
+
+.socials a:hover i{
+    color: #D16210;
+    border: 1.1px solid #D16210;
+    
+}
+
+
